ENH: Restore initial transform UI controls with radio button options
- Add radio buttons for choosing between existing transform or landmark-based transform
- Add existingTransformSelector combo box for selecting existing transforms
- Add landmarkTransformTypeComboBox with rigid/similarity/affine options
- Add label_46 for transform type label
- Connect existingTransformSelector to MRML scene
- Fix layout to support both transform initialization methods

--- a/ANTsRegistration/Resources/UI/ANTsRegistration.ui
+++ b/ANTsRegistration/Resources/UI/ANTsRegistration.ui
@@ -129,74 +129,125 @@
             <property name="title">
              <string>Initial Transform</string>
             </property>
+            <property name="checkable">
+             <bool>true</bool>
+            </property>
+            <property name="checked">
+             <bool>false</bool>
+            </property>
             <layout class="QFormLayout" name="formLayout_14">
              <item row="0" column="0">
-              <widget class="QLabel" name="label_43">
+              <widget class="QRadioButton" name="useExistingTransformRadio">
                <property name="text">
-                <string>Compute landmark-based RIGID initial transform:</string>
+                <string>Use existing transform:</string>
                </property>
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QCheckBox" name="initialTransformPWCheckBox">
-               <property name="text">
-                <string/>
+              <widget class="qMRMLNodeComboBox" name="existingTransformSelector">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+               <property name="nodeTypes">
+                <stringlist>
+                 <string>vtkMRMLTransformNode</string>
+                </stringlist>
+               </property>
+               <property name="noneEnabled">
+                <bool>true</bool>
+               </property>
+               <property name="addEnabled">
+                <bool>false</bool>
+               </property>
+               <property name="renameEnabled">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
              <item row="1" column="0">
+              <widget class="QRadioButton" name="useLandmarkTransformRadio">
+               <property name="text">
+                <string>Compute landmark-based transform:</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <layout class="QHBoxLayout" name="horizontalLayout_9">
+               <item>
+                <widget class="QLabel" name="label_46">
+                 <property name="text">
+                  <string>Type:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="landmarkTransformTypeComboBox">
+                 <property name="enabled">
+                  <bool>true</bool>
+                 </property>
+                 <item>
+                  <property name="text">
+                   <string>rigid</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>similarity</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>affine</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item row="2" column="0">
               <widget class="QLabel" name="label_44">
                <property name="text">
                 <string>Fixed landmarks:</string>
                </property>
               </widget>
              </item>
-             <item row="2" column="0">
-              <widget class="QLabel" name="label_45">
-               <property name="text">
-                <string>moving landmarks</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
+             <item row="2" column="1">
               <widget class="qMRMLNodeComboBox" name="fixedLandmarkSelector">
                <property name="nodeTypes">
                 <stringlist notr="true">
                  <string>vtkMRMLMarkupsFiducialNode</string>
                 </stringlist>
                </property>
-               <property name="hideChildNodeTypes">
-                <stringlist notr="true"/>
-               </property>
                <property name="noneEnabled">
                 <bool>true</bool>
                </property>
                <property name="addEnabled">
                 <bool>false</bool>
                </property>
-               <property name="interactionNodeSingletonTag">
-                <string notr="true"/>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_45">
+               <property name="text">
+                <string>Moving landmarks:</string>
                </property>
               </widget>
              </item>
-             <item row="2" column="1">
+             <item row="3" column="1">
               <widget class="qMRMLNodeComboBox" name="movingLandmarkSelector">
                <property name="nodeTypes">
                 <stringlist notr="true">
                  <string>vtkMRMLMarkupsFiducialNode</string>
                 </stringlist>
                </property>
-               <property name="hideChildNodeTypes">
-                <stringlist notr="true"/>
-               </property>
                <property name="noneEnabled">
                 <bool>true</bool>
                </property>
                <property name="addEnabled">
                 <bool>false</bool>
-               </property>
-               <property name="interactionNodeSingletonTag">
-                <string notr="true"/>
                </property>
               </widget>
              </item>
@@ -1875,6 +1926,22 @@
    <sender>ANTsRegistration</sender>
    <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
    <receiver>fixedLandmarkSelector</receiver>
+   <slot>setMRMLScene(vtkMRMLScene*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>345</x>
+     <y>604</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>488</x>
+     <y>234</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>ANTsRegistration</sender>
+   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
+   <receiver>existingTransformSelector</receiver>
    <slot>setMRMLScene(vtkMRMLScene*)</slot>
    <hints>
     <hint type="sourcelabel">
